[metadata]
name = koku-nise
version = attr: nise.__version__
author = Project Koku
author_email = cost_mgmt@redhat.com
description = A tool for generating sample cost and usage data for testing purposes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/project-koku/nise
license_files = LICENSE
project_urls =
    Bug Tracker=https://issues.redhat.com/projects/COST/
    CI: GitHub Actions=https://github.com/project-koku/nise/actions
    Source Code=https://github.com/project-koku/nise
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent

[options]
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    nise = nise.__main__:main
