[metadata]
name = koku-nise
version = attr: nise.__version__
author = Project Koku
author_email = cost_mgmt@redhat.com
description = A tool for generating sample cost and usage data for testing purposes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/project-koku/nise
license_files = LICENSE
project_urls =
    Bug Tracker=https://issues.redhat.com/projects/COST/
    CI: GitHub Actions=https://github.com/project-koku/nise/actions
    Source Code=https://github.com/project-koku/nise
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent

[options]
python_requires = >=3.8
include_package_data = True
zip_safe = False
install_requires =
    azure-storage-blob >= 12.1
    boto3 >= 1.11
    faker >= 3.0
    google-cloud-bigquery >= 2.2.0
    google-cloud-storage >= 1.19
    jinja2 >= 2.10
    oci >= 2.64.0
    pyyaml >= 5.3
    requests >= 2.22

[options.entry_points]
console_scripts =
    nise = nise.__main__:main

[options.extras_require]
dev = file: tests/requirements/dev.txt


[flake8]
; E203 = Whitespace before ':', conflicts with black
; W503 = Line break before binary operator
ignore =
    E203,
    W503,
max-complexity = 10
max-line-length = 120
import-order-style = pycharm
application-import-names = nise
